deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: creditcard
  labels:
    app: creditcard
spec:
  selector:
    app: creditcard
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: creditcard
spec:
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: creditcard
        version: v1
    spec:
      containers:
      - name: creditcard
        image: samuelpereiradesouza/creditcard:1
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
