deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
spec:
  hosts:
  - shipping
  http:
  - route:
    - destination:
        host: shipping
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping
spec:
  host: shipping
  subsets:
  - name: v1
    labels:
      version: v1
---
